--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
   "description": "An API for a one-way game of battleships where one player always defends and the other always attacks.",
   "main": "index.js",
   "scripts": {
-    "dev": "node index.js",
-    "test": "mocha"
+    "dev": "node dist/index.js",
+    "test": "mocha",
+    "build": "tsc"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/express": "^4.16.1",
+    "@types/mongoose": "^5.3.26",
     "express": "^4.16.4",
     "mocha": "^6.1.4",
     "mongoose": "^5.5.2",
