--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "build": "tsc"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "Søren Ullidtz",
+  "license": "MIT",
   "dependencies": {
     "@types/express": "^4.16.1",
     "@types/mongoose": "^5.3.26",
